<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:gravity="center">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:text="@string/Pedo_meter"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_steps"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startValue" />
    <TextView
        android:id="@+id/distance_show"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter" />

    <TextView
        android:id="@+id/showOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/milestone"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/function_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round"
            android:text="@string/reset"></Button>

        <Button
            android:id="@+id/set_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round"
            android:text="@string/set_name"></Button>


    </LinearLayout>

    <ImageButton
        android:id="@+id/back_imagebutton"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:background="@drawable/round"
        android:contentDescription="@string/Back_button"
        app:srcCompat="@drawable/ic_back_noti" />


</LinearLayout>