<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Height"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/Height"
        android:layout_width="105dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Weight"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/Weight"
        android:layout_width="105dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/buttonCal"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round"
        android:text="@string/Button_text"
        android:textColor="@android:color/white"
        android:textColorLink="#FFFAE3"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text_calculate"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/output"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/string_output"
        android:layout_width="304dp"
        android:layout_height="115dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BMI_button"
            android:layout_width="109dp"
            android:layout_height="61dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/button_BMI"
            android:textColor="@android:color/white"
            android:textColorLink="#FFFAE3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/Button_time"
            android:textColor="@android:color/white"
            android:textColorLink="#FFFAE3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonNoti"
            android:layout_width="151dp"
            android:layout_height="61dp"
            android:background="@drawable/button_shape"
            android:text="@string/button_noti"
            android:textColor="@android:color/white"
            android:textColorLink="#FFFAE3"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>


